--- a/source/_posts/雷达自动升温控制器设计.md
+++ b/source/_posts/雷达自动升温控制器设计.md
@@ -3,13 +3,9 @@ title: 雷达自动升温控制器设计
 date: 2022-02-22 16:37:37
 tags: [pid, control theory]
 categories: [笔记]
+description: 一个给雷达生产过程中自动加热升温的设计方案
 ---
 
-> version: v 1.0.0
->
-> Last Edit: 20200813
->
-> Members: Stephen Fang, Jacky Wu
 
 
 ## 1 控制器
